# qdmt

./: .gitignore  README.md  gstate_ising2_D2_qb2-old.npy  gstate_ising2_D2_qb2.npy  gstate_ising2_D2_qb3-old.npy  gstate_ising2_D2_qb3.npy  gstate_ising2_D2_qb4-old.npy  gstate_ising2_D2_qb4.npy  gstate_ising2_D4_qb2.npy  gstate_ising2_D4_qb4.npy  gstate_ising2_D8_qb2.npy  gstate_ising2_D8_qb4.npy  hamiltonian.py  psi_optimised.npy  psi_optimised.pkl  pyproject.toml  temp.py
data/: exact_gs_energy.csv  gstate_ising2_D2_qb2.npy  gstate_ising2_D2_qb3.npy  gstate_ising2_D2_qb4.npy  gstate_ising2_D4_qb2.npy  gstate_ising2_D4_qb4.npy  gstate_ising2_D8_qb2.npy  gstate_ising2_D8_qb4.npy  singular_vals.npy  singular_vals_I_minus_rho.npy  singular_vals_ham.npy  singular_vals_minus_I.npy  singular_vals_no_change.npy  singular_vals_no_change_plus.npy  singular_vals_no_evolution.npy  singular_vals_plus_I.npy  tdist_optimising_state.npy  tdist_optimising_state_eye.npy  tdist_optimising_state_minimize.npy  tdist_optimising_state_minus_eye.npy
itensorThermal/: analysePurification.py  data.txt  dataTFIM.txt  dataTLIM.txt  metts.jl  mettsTFIM.jl  purification.jl  purificationTFIM.jl  purificationTLIM.jl  test.jl
notebooks/: Computing Loschmidt with Density.ipynb  Evolving density matrices.ipynb  Exact Groundstates TFIM.ipynb  Gradient Descent w Riemanian terms.ipynb  Investigating Optimisation.ipynb  Multi-site VUMPs groundstate results.ipynb  Optimising Density Matrix.ipynb  Performing time evolution.ipynb  Plotting Singular Values evolved density matrix.ipynb  Untitled.ipynb  (+10 more)
(+68 files in other folders)
